Changed name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "makers-klub-landing",
+  "name": "makers_klub_landing",
   "version": "1.0.0",
   "description": "Makers Klub - Premium networking platform for creative professionals",
   "main": "index.html",
